--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
+    "thunder-client": "^0.4.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.25"
