feat update user

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DB_USER=postgres
 DB_PASS=030169
 DB_NAME=mysales
 APP_SECRET=12345678
+EMAIL_USER=e.evertonn.2016@gmail.com
+EMAIL_PASS=llhiwnjxeoeluxgz
