--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ DB_NAME=mysales
 APP_SECRET=12345678
 EMAIL_USER=e.evertonn.2016@gmail.com
 EMAIL_PASS=llhiwnjxeoeluxgz
+APP_API_URL=http://localhost:3333
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
