--- a/package.json
+++ b/package.json
@@ -33,14 +33,18 @@
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
     "celebrate": "^15.0.3",
+    "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.0",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
+    "ioredis": "^5.7.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
+    "rate-limiter-flexible": "^7.2.0",
+    "redis": "^4.7.1",
     "reflect-metadata": "^0.2.2",
     "thunder-client": "^0.4.2",
     "ts-node": "^10.9.2",
